--- a/BookshopApp/BookshopApp.csproj
+++ b/BookshopApp/BookshopApp.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.6" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -31,15 +32,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Remove="ClientApp1\package-lock.json" />
-    <Content Remove="ClientApp1\package.json" />
-    <Content Remove="ClientApp1\public\manifest.json" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="ClientApp1\package-lock.json" />
-    <None Include="ClientApp1\package.json" />
-    <None Include="ClientApp1\public\manifest.json" />
+    <Content Remove="ClientApp\package-lock.json" />
+    <Content Remove="ClientApp\package.json" />
+    <Content Remove="ClientApp\public\manifest.json" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
