--- a/BookshopApp/ClientApp/package.json
+++ b/BookshopApp/ClientApp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "bs-custom-file-input": "^1.3.4",
     "jquery": "^3.5.1",
     "merge": "^1.2.1",
     "react": "^16.0.0",
