Changed arhitecture. Add Infrastructure project

--- a/BookshopApp/BookshopApp.csproj
+++ b/BookshopApp/BookshopApp.csproj
@@ -43,6 +43,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BookshopApp.Db\BookshopApp.Db.csproj" />
+    <ProjectReference Include="..\BookshopApp.Infrastructure\BookshopApp.Infrastructure.csproj" />
     <ProjectReference Include="..\BookshopApp.Models\BookshopApp.Models.csproj" />
   </ItemGroup>
 
